# ai-news-digest

./: .gitignore  LICENSE  README.md
ai-news-pusher/: index.html  package-lock.json  package.json
ai-news-pusher/src/: App.tsx
ai-news-pusher/src-tauri/: Cargo.toml  tauri.conf.json
ai-news-pusher/src-tauri/capabilities/: default.json
ai-news-pusher/src-tauri/src/: commands.rs  lib.rs  main.rs
ai-news-pusher/src-tauri/src/adapters/: email.rs  feishu.rs  mod.rs  qq.rs  telegram.rs  wechat.rs
ai-news-pusher/src-tauri/src/core/: ai_provider.rs  collector.rs  mod.rs  processor.rs  scheduler.rs  storage.rs
ai-news-pusher/src/components/: NewsList.tsx  SettingsPanel.tsx  SourceList.tsx
ai-news-pusher/src/styles/: App.css  NewsList.css  SettingsPanel.css  SourceList.css  index.css
knowledge base/: PossibilityResearch.md  UseAISafty.md
plans/: ai-news-push-system-architecture-v2.md  ai-news-push-system-architecture.md
