[package]
name = "ai-news-pusher"
version = "0.1.0"
description = "基于 AI 的跨平台资讯推送系统"
authors = ["AI News Pusher Team"]
edition = "2021"

[lib]
name = "ai_news_pusher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.14"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
once_cell = "1"
regex = "1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
native-tls = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
